<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.EditProfileFragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_95" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/grey_100_"
        android:fitsSystemWindows="false"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetStartWithNavigation="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:clipToPadding="false"
        android:padding="@dimen/spacing_mlarge"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <com.instabug.library.ui.custom.CircularImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/imgProfilePicUpdateProfile"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:src="@drawable/profile"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

                <ImageView
                    android:id="@+id/imgUploadPicUpdateProfile"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="36dp"
                    android:contentDescription="@null"
                    android:padding="6dp"
                    android:src="@drawable/camera" />
            </FrameLayout>
            <EditText
                style="@style/EditText.Flat.Grey"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:background="@drawable/edit_text_round_bg_overlay_white"
                android:minHeight="@dimen/spacing_xmlarge"
                android:paddingLeft="@dimen/spacing_middle"
                android:paddingRight="@dimen/spacing_middle"
                android:hint="@string/hint_fname"
                android:id="@+id/edt_firstname"
                android:textColor="@android:color/white" />
            <EditText
                style="@style/EditText.Flat.Grey"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:background="@drawable/edit_text_round_bg_overlay_white"
                android:minHeight="@dimen/spacing_xmlarge"
                android:paddingLeft="@dimen/spacing_middle"
                android:paddingRight="@dimen/spacing_middle"
                android:hint="@string/hint_lname"
                android:id="@+id/edt_lastname"
                android:textColor="@android:color/white" />
            <EditText
                style="@style/EditText.Flat.Grey"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:background="@drawable/edit_text_round_bg_overlay_white"
                android:minHeight="@dimen/spacing_xmlarge"
                android:paddingLeft="@dimen/spacing_middle"
                android:paddingRight="@dimen/spacing_middle"
                android:hint="@string/hint_designation"
                android:id="@+id/edt_designation"
                android:textColor="@android:color/white" />

            <EditText
                style="@style/EditText.Flat.Grey"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:background="@drawable/edit_text_round_bg_overlay_white"
                android:minHeight="@dimen/spacing_xmlarge"
                android:paddingLeft="@dimen/spacing_middle"
                android:paddingRight="@dimen/spacing_middle"
                android:hint="@string/hint_address"
                android:id="@+id/edt_address"
                android:textColor="@android:color/white" />
            <EditText
                style="@style/EditText.Flat.Grey"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:background="@drawable/edit_text_round_bg_overlay_white"
                android:minHeight="@dimen/spacing_xmlarge"
                android:paddingLeft="@dimen/spacing_middle"
                android:paddingRight="@dimen/spacing_middle"
                android:hint="@string/hint_company_code"
                android:id="@+id/edt_company_code"
                android:textColor="@android:color/white" />

            <EditText
                style="@style/EditText.Flat.Grey"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:background="@drawable/edit_text_round_bg_overlay_white"
                android:minHeight="@dimen/spacing_xmlarge"
                android:paddingLeft="@dimen/spacing_middle"
                android:paddingRight="@dimen/spacing_middle"
                android:hint="@string/hint_email"
                android:id="@+id/edt_email"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnUpdateProfile"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:background="@drawable/btn_orange"
                android:text="Update"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
</FrameLayout>