<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bt_close"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="@android:color/white"
                app:srcCompat="@drawable/ic_close" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/update_branch"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white" />


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:id="@+id/bt_save"
                android:src="@drawable/ic_baseline_check_24"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:gravity="center"
                android:paddingLeft="@dimen/spacing_xsmall"
                android:paddingRight="@dimen/spacing_xsmall"
                ></ImageButton>

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clipToPadding="false"
        android:padding="@dimen/spacing_large"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey_40">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/bra_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Branch Code"></androidx.appcompat.widget.AppCompatEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_middle" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey_40">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/bra_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/branch_name"></androidx.appcompat.widget.AppCompatEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_middle" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey_40">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/bra_radius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/branch_radius"
                    android:inputType="numberDecimal"></androidx.appcompat.widget.AppCompatEditText>


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Set Radius between 150 m to 1000 m, By setting radius,Employee can mark attendance inside this specific radius only if 'geo-fence' option is enable during while making new employee entry."
                android:textAlignment="textStart"
                android:textColor="@color/black">
            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_middle" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/grey_40">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/bra_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/branch_address"></androidx.appcompat.widget.AppCompatEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/bra_lat"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/latitude"></androidx.appcompat.widget.AppCompatEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="0dp" />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/bra_long"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/longitude"></androidx.appcompat.widget.AppCompatEditText>

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>
            <Button
                android:id="@+id/branch_map"
                style="@style/Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Browse Branch Location on Map"
                android:drawableLeft="@drawable/ic_baseline_map_24"
                android:layout_gravity="center"
                android:gravity="center"
                />
            <Button
                android:id="@+id/btn_delete"
                style="@style/Button.White.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Delete this branch"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"
                />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>




</LinearLayout>