<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ChangePasswordFragment">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment."
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_95" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/grey_100_"
        android:fitsSystemWindows="false"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetStartWithNavigation="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:clipToPadding="false"
        android:padding="@dimen/spacing_mlarge"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                style="@style/EditText.Flat.Grey"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:background="@drawable/edit_text_round_bg_overlay_white"
                android:minHeight="@dimen/spacing_xmlarge"
                android:paddingLeft="@dimen/spacing_middle"
                android:paddingRight="@dimen/spacing_middle"
                android:id="@+id/edtOldPassWord"
                android:hint="@string/hint_old_password"
                android:inputType="textPassword"
                android:textColor="@android:color/white" />
            <EditText
                style="@style/EditText.Flat.Grey"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:background="@drawable/edit_text_round_bg_overlay_white"
                android:minHeight="@dimen/spacing_xmlarge"
                android:paddingLeft="@dimen/spacing_middle"
                android:paddingRight="@dimen/spacing_middle"
                android:hint="@string/hint_new_password"
                android:inputType="textPassword"
                android:id="@+id/edtNewPassword"
                android:textColor="@android:color/white" />



            <EditText
                style="@style/EditText.Flat.Grey"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xmlarge"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:background="@drawable/edit_text_round_bg_overlay_white"
                android:minHeight="@dimen/spacing_xmlarge"
                android:paddingLeft="@dimen/spacing_middle"
                android:paddingRight="@dimen/spacing_middle"
                android:id="@+id/edtConfirmPassword"
                android:hint="@string/hint_confirm_password"
                android:textColor="@android:color/white" />


            <Button
                android:id="@+id/btnChangePassword"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:background="@drawable/btn_orange"
                android:text="Update"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
</FrameLayout>